appId: com.goldjunge91.fam1
---
- tapOn:
    id: "navigation-menu-open"
- tapOn: "Vorrat, ›"
- extendedWaitUntil:
    visible: "Artikel suchen"
    timeout: 10000
